// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot matches snapshot 1 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR cTrRlk aje-popover is-undefined aje-popover-bottom-left"
  >
    Child
  </div>
</DocumentFragment>
`;

exports[`matches snapshot matches snapshot 1 2`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR cTrRlk aje-popover is-undefined aje-popover-bottom-left is-visible"
  >
    Child
  </div>
</DocumentFragment>
`;
